Structure changes: removed theme ans state folders. Layouts is now depend on region, not media query. Added new mixins: - media-xs - media-sm - media-xs-sm - media-md - media-lg - media-containers Added new function `color-contrast`. button-variant mixin was rewrited to auto color correction for text.

--- a/STARTER/styles/scss/base/_typography.scss
+++ b/STARTER/styles/scss/base/_typography.scss
@@ -9,7 +9,6 @@ html {
 body {
   @include font-size($font-size-base);
   font-family: $font-family;
-  line-height: $line-height-computed;
   color: $text-color;
 }
 
