--- a/STARTER/styles/scss/module/default/_forms.scss
+++ b/STARTER/styles/scss/module/default/_forms.scss
@@ -46,8 +46,7 @@ select {
     transition: all 200ms linear;
   }
 
-  &:disabled,
-  &:read-only {
+  &:disabled {
     cursor: not-allowed;
     background: $input-bg-disabled;
     font-size: 100%;
